- some fixes in HTML struct; - "trending-clothing" section is almost complete.

--- a/index.html
+++ b/index.html
@@ -228,184 +228,86 @@
                     <div class="mySlides">
                         <div class="item">
                             <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <i class="fa-discount"></i>
-                                <span class="discount">
-                                    -20&#37;
-                                </span>
-                                <img src="/path" alt="Item image">
-                            </div>
-                            STRUCTURED COLLARLESS COAT<br>
-                            <span style="color:#F08080">&#36;133.20</span>
-                            <span style="text-decoration:line-through">&#36;148.00</span>
-                        </div>
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <div class="item-options">
-                                    <i class="fa-recycle"></i> <a href="#">ADD TO CART</a> | 
-                                    <i class="fa-heart"></i> | <i class="fa-find"></i>
+                                <img src="images/trending-clothing/bg.png" alt="Item image">
+                                <div class="item-menu">
+                                    <ul>
+                                        <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                        <li><a class="tr-text" href="#">Add to cart</a></li>
+                                        <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                        <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                    </ul>
                                 </div>
-                                <img src="/path" alt="Item image">
                             </div>
-                            SUPER CLOVER ROBE JACKET<br>
-                            <span style="color:#F08080">&#36;124.22</span>
-                            <span style="text-decoration:line-through">&#36;248.44</span>
+                            <div class="item-new">
+                                <p>New</p>
+                                <span>-10%</span>
+                            </div>
+                            <div class="item-sub">
+                                <span class="br">Casual fashion wool coat</span>
+                                <span class="color-pink">&#36;90.00</span>
+                                <span class="color-gainsboro">&#36;100.00</span>
+                            </div>
                         </div>
                         <div class="item">
                             <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <i class="fa-discount"></i>
-                                <span class="discount">
-                                    -25&#37;
-                                </span>
-                                <img src="/path" alt="Item image">
-                            </div>
-                            FULL HAND ANIMAL JACKET<br>
-                            <span style="color:#F08080">&#36;100.00</span>
-                        </div>
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    SALE
-                                </span>
-                                <img src="/path" alt="Item image">
-                            </div>
-                            MEN'S FASHION BLUE JEAN COAT<br>
-                            <span style="color:#F08080">&#36;130.00</span>
-                            <span style="text-decoration:line-through">&#36;150.00</span>
-                        </div>
-                    </div>
-                    <div class="mySlides">
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <i class="fa-discount"></i>
-                                <span class="discount">
-                                    -20&#37;
-                                </span>
-                                <img src="/path" alt="Item image">
-                            </div>
-                            STRUCTURED COLLARLESS COAT<br>
-                            <span style="color:#F08080">&#36;133.20</span>
-                            <span style="text-decoration:line-through">&#36;148.00</span>
-                        </div>
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <div class="item-options">
-                                    <i class="fa-recycle"></i> <a href="#">ADD TO CART</a> | 
-                                    <i class="fa-heart"></i> | <i class="fa-find"></i>
+                                <img src="images/trending-clothing/bg.png" alt="Item image">
+                                <div class="item-menu">
+                                    <ul>
+                                        <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                        <li><a class="tr-text" href="#">Add to cart</a></li>
+                                        <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                        <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                    </ul>
                                 </div>
-                                <img src="/path" alt="Item image">
                             </div>
-                            SUPER CLOVER ROBE JACKET<br>
-                            <span style="color:#F08080">&#36;124.22</span>
-                            <span style="text-decoration:line-through">&#36;248.44</span>
+                            <div class="item-new">
+                                <p>New</p>
+                            </div>
+                            <div class="item-sub">
+                                <span class="br">V-neck men blue t-shirt</span>
+                                <span class="color-pink">&#36;95.66</span>
+                            </div>
                         </div>
                         <div class="item">
                             <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <i class="fa-discount"></i>
-                                <span class="discount">
-                                    -25&#37;
-                                </span>
-                                <img src="/path" alt="Item image">
-                            </div>
-                            FULL HAND ANIMAL JACKET<br>
-                            <span style="color:#F08080">&#36;100.00</span>
-                        </div>
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    SALE
-                                </span>
-                                <img src="/path" alt="Item image">
-                            </div>
-                            MEN'S FASHION BLUE JEAN COAT<br>
-                            <span style="color:#F08080">&#36;130.00</span>
-                            <span style="text-decoration:line-through">&#36;150.00</span>
-                        </div>
-                    </div>
-                    <div class="mySlides">
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <i class="fa-discount"></i>
-                                <span class="discount">
-                                    -20&#37;
-                                </span>
-                                <img src="/path" alt="Item image">
-                            </div>
-                            STRUCTURED COLLARLESS COAT<br>
-                            <span style="color:#F08080">&#36;133.20</span>
-                            <span style="text-decoration:line-through">&#36;148.00</span>
-                        </div>
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <div class="item-options">
-                                    <i class="fa-recycle"></i> <a href="#">ADD TO CART</a> | 
-                                    <i class="fa-heart"></i> | <i class="fa-find"></i>
+                                <img src="images/trending-clothing/bg.png" alt="Item image">
+                                <div class="item-menu">
+                                    <ul>
+                                        <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                        <li><a class="tr-text" href="#">Add to cart</a></li>
+                                        <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                        <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                    </ul>
                                 </div>
-                                <img src="/path" alt="Item image">
                             </div>
-                            SUPER CLOVER ROBE JACKET<br>
-                            <span style="color:#F08080">&#36;124.22</span>
-                            <span style="text-decoration:line-through">&#36;248.44</span>
+                            <div class="item-new">
+                                <p>New</p>
+                            </div>
+                            <div class="item-sub">
+                                <span class="br">Gray shadow jean shirt</span>
+                                <span class="color-pink">&#36;158.78</span>
+                            </div>
                         </div>
                         <div class="item">
                             <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    NEW
-                                </span>
-                                <i class="fa-discount"></i>
-                                <span class="discount">
-                                    -25&#37;
-                                </span>
-                                <img src="/path" alt="Item image">
+                                <img src="images/trending-clothing/bg.png" alt="Item image">
+                                <div class="item-menu">
+                                    <ul>
+                                        <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                        <li><a class="tr-text" href="#">Add to cart</a></li>
+                                        <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                        <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                    </ul>
+                                </div>
                             </div>
-                            FULL HAND ANIMAL JACKET<br>
-                            <span style="color:#F08080">&#36;100.00</span>
-                        </div>
-                        <div class="item">
-                            <div class="item-image">
-                                <i class="fa-rect"></i>
-                                <span class="rect">
-                                    SALE
-                                </span>
-                                <img src="/path" alt="Item image">
+                            <div class="item-new">
+                                <p>Sale</p>
                             </div>
-                            MEN'S FASHION BLUE JEAN COAT<br>
-                            <span style="color:#F08080">&#36;130.00</span>
-                            <span style="text-decoration:line-through">&#36;150.00</span>
+                            <div class="item-sub">
+                                <span class="br">Black man leather coat</span>
+                                <span class="color-pink">&#36;160.00</span>
+                                <span class="color-gainsboro">&#36;200.00</span>
+                            </div>
                         </div>
                     </div>
                 </div>
