"featured-products" section is complete.

--- a/index.html
+++ b/index.html
@@ -520,116 +520,189 @@
         <!--End PROMOTION-->
         <!--Begin FEATURED PRODUCTS-->
         <div class="featured-products">
-            <div class="description">
-                <span class="name">FEATURED PRODUCTS</span>
-                <div class="multi-line"></div>
-                SUMMER OFFER! GET EXTRA DISCOUNT UPTO 20&#37; FOR ALL COLLECT ON
-            </div>
-            <div class="wrapper">
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            NEW
-                        </span>
-                        <i class="fa-discount"></i>
-                        <span class="discount">
-                            -20&#37;
-                        </span>
-                        <img src="/path" alt="Item image">
-                    </div>
-                    STRUCTURED COLLARLESS COAT<br>
-                    <span style="color:#F08080">&#36;133.20</span>
-                    <span style="text-decoration:line-through">&#36;148.00</span>
+            <div class=wrapper>
+                <div class="description">
+                    <span class="name">Featured products</span>
+                    <div class="multi-line"></div>
                 </div>
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            NEW
-                        </span>
-                        <img src="/path" alt="Item image">
+                <div class="content">
+                    <span class="select">
+                        <a href="#">Summer offer! Get extra discount upto 20&#37; for all collect on</a>
+                    </span>
+                    <div class="mySlides">
+                        <div class="mySlide">
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>New</p>
+                                    <span>-20%</span>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Structured colarless coat</span>
+                                    <span class="color-pink">&#36;133.20</span>
+                                    <span class="color-gainsboro">&#36;148.00</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>New</p>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Super clover robe jacket</span>
+                                    <span class="color-pink">&#36;124.22</span>
+                                    <span class="color-gainsboro">&#36;248.44</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>New</p>
+                                    <span>-50%</span>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Full hand animal jacket</span>
+                                    <span class="color-pink">&#36;100.00</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>Sale</p>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Men's fashion blue jean coat</span>
+                                    <span class="color-pink">&#36;130.00</span>
+                                    <span class="color-gainsboro">&#36;150.00</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mySlide">
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>New</p>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Aros slim heavy chino</span>
+                                    <span class="color-pink">&#36;181.00</span>
+                                    <span class="color-gainsboro">&#36;212.00</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>New</p>
+                                    <span>-10%</span>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Volv checked casual shirt</span>
+                                    <span class="color-pink">&#36;95.66</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>New</p>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Yellow clover robe jacket</span>
+                                    <span class="color-pink">&#36;100.00</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item-image">
+                                    <img src="images/trending-clothing/bg.png" alt="Item image">
+                                    <div class="item-menu">
+                                        <ul>
+                                            <li><a class="fa fa-shopping-cart tr-cart" href="#"></a></li>
+                                            <li><a class="tr-text" href="#">Add to cart</a></li>
+                                            <li><a class="fa fa-heart tr-heart" href="#"></a></li>
+                                            <li><a class="fa fa-search tr-search" href="#"></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="item-new">
+                                    <p>New</p>
+                                </div>
+                                <div class="item-sub">
+                                    <span class="br">Houndsmooth wool t-shirt</span>
+                                    <span class="color-pink">&#36;168.00</span>
+                                    <span class="color-gainsboro">&#36;212.00</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    SUPER CLOVER ROBE JACKET<br>
-                    <span style="color:#F08080">&#36;124.22</span>
-                    <span style="text-decoration:line-through">&#36;248.44</span>
-                </div>
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            NEW
-                        </span>
-                        <i class="fa-discount"></i>
-                        <span class="discount">
-                            -25&#37;
-                        </span>
-                        <img src="/path" alt="Item image">
-                    </div>
-                    FULL HAND ANIMAL JACKET<br>
-                    <span style="color:#F08080">&#36;100.00</span>
-                </div>
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            SALE
-                        </span>
-                        <img src="/path" alt="Item image">
-                    </div>
-                    MEN'S FASHION BLUE JEAN COAT<br>
-                    <span style="color:#F08080">&#36;130.00</span>
-                    <span style="text-decoration:line-through">&#36;150.00</span>
-                </div>
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            NEW
-                        </span>
-                        <img src="/path" alt="Item image">
-                    </div>
-                    AROS SLIM HEAVY CHINO<br>
-                    <span style="color:#F08080">&#36;181.00</span>
-                    <span style="text-decoration:line-through">&#36;212.00</span>
-                </div>
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            NEW
-                        </span>
-                        <i class="fa-discount"></i>
-                        <span class="discount">
-                            -10&#37;
-                        </span>
-                        <img src="/path" alt="Item image">
-                    </div>
-                    VOLV CHECKED CASUAL SHIRT<br>
-                    <span style="color:#F08080">&#36;95.66</span>
-                </div>
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            NEW
-                        </span>
-                        <img src="/path" alt="Item image">
-                    </div>
-                    YELLOW CLOVER ROBE JACKET<br>
-                    <span style="color:#F08080">&#36;100.00</span>
-                </div>
-                <div class="item">
-                    <div class="item-image">
-                        <i class="fa-rect"></i>
-                        <span class="rect">
-                            NEW
-                        </span>
-                        <img src="/path" alt="Item image">
-                    </div>
-                    HOUNDSMOOTH WOOL T-SHIRT<br>
-                    <span style="color:#F08080">&#36;168.00</span>
-                    <span style="text-decoration:line-through">&#36;212.00</span>
                 </div>
             </div>
         </div>
