--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <div class="buttons-wrapper">
                     <div class="floatright">
                         <ul>
-                            <li class="button">
+                            <li>
                                 <a href="#"><i class="fa fa-heart-o"></i> Wishlist</a>
                             </li>
-                            <li class="button">
+                            <li>
                                 <a href="#"><i class="fa fa-shopping-cart"></i> Checkout</a>
                             </li>
                         </ul>
@@ -496,24 +496,24 @@
         <!--End TRENDING CLOTHING-->
         <!--Begin PROMOTION-->
         <div class="promotion">
-            <div class="side-left">
-                <span style="font-size:32pt; color:#F08080">HAUSNA</span><br/>
-                MADE IN MEN'S WEAR
-                <hr/>
-                SEE OUR EXCLUSIVE COLLECTION
-                <hr/>
-                <div class="button">
-                    <a href="#">SHOP NOW</a>
+            <div class="collumn">
+                <div class="side-left">
+                    <span class="color-pink big-font">Hausna</span>
+                    <span>Made in men's wear</span>
+                    <span class="with-border">See our exclusive collection</span>
+                    <div class="button">
+                        <a href="#">Shop now</a>
+                    </div>
                 </div>
             </div>
-            <div class="side-right">
-                EXPLORE OUR NEW COLLECTION<br/>
-                <span style="font-size:32pt; color:#F08080">WE KNOW YOUR FIT</span>
-                <hr/>
-                GET THE EXTRA <span style="color:#F08080">50&#37;</span> OFFER! TODAY ONLY
-                <hr/>
-                <div class="button">
-                    <a href="#">VIEW COLLECTION</a>
+            <div class="collumn">
+                <div class="side-right">
+                    <span>Explore our new collection</span>
+                    <span class="color-pink big-font">We know your fit</span>
+                    <span class="with-border">Get the extra <span class="color-pink">50&#37;</span> offer! Today only</span>
+                    <div class="button">
+                        <a href="#">View collection</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -709,36 +709,116 @@
         <!--End FEATURED PRODUCTS-->
         <!--Begin BLOG-->
         <div class="blog">
-            <div class="description">
-                <span class="name">FRESH FROM THE BLOG</span>
-                <div class="multi-line"></div>
-                <div class="empl_prev"></div>
-                <div class="empl_next"></div>
-            </div>
-            <div class="content">
-                <div class="mySlides">
-                    <div class="item">
-                        <div class="item-left">
-                            _<span style="color:#F08080">13</span><br />
-                            APRIL 2015 <i class="fa-comments"></i>12
-                            <hr>
-                            TRENDY CLOTH DESIGNS MADE FROM OUR TEAM <br />
-                            Trendy Collection
-                            <div class="button">
-                                <a href="#">VIEW POST</a><i class="fa-arrow"></i>
-                            </div>
+            <div class="wrapper">
+                <div class="description">
+                    <span class="name">Fresh from the blog</span>
+                    <div class="multi-line"></div>
+                </div>
+                <div class="content">
+                    <span class="select">
+                        <a class="prev-control" onclick="secondPlusDiv(-1)">
+                            <i class="fa fa-angle-left"></i>
+                        </a>
+                        <a class="next-control" onclick="secondPlusDiv(+1)">
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </span>
+                    <div class="mySlides">
+                        <div class="mySlide secondInScript">
+				            <div class="collumn">
+								<div class="item-text">
+									<h2><span>_</span> 13</h2>
+									<div class="months">
+										<div class="right">
+								            <p>April 2015 </p>
+								            <span><i class="fa fa-comment-o"></i>12</span>
+								        </div>
+										<div class="item-bottom-text">
+                                            <h4>Trendy cloth designs made from<br> our team</h4>
+											<p>Trendy Collection</p>
+											<div class="button">
+												<a class="" href="">View post
+												<i class="fa fa-long-arrow-right"></i> 
+												</a>
+											</div>
+								        </div>
+								    </div>
+								</div>
+								<div class="item-img">
+									<img src="images/blog/bg.png" alt="Post image">
+								</div>
+				            </div>
+							<div class="collumn">
+								<div class="item-text">
+									<h2><span>_</span> 12</h2>
+									<div class="months">
+										<div class="right">
+								            <p>April 2015 </p>
+								            <span><i class="fa fa-comment-o"></i>9</span>
+								        </div>
+										<div class="item-bottom-text">
+                                            <h4>Trendy cloth designs made from<br> our team</h4>
+											<p>Trendy Collection</p>
+											<div class="button">
+												<a class="" href="">View post
+												<i class="fa fa-long-arrow-right"></i> 
+												</a>
+											</div>
+								        </div>
+								    </div>
+								</div>
+								<div class="item-img">
+									<img src="images/blog/bg.png" alt="">
+								</div>
+							</div>
                         </div>
-                    </div>
-                    <div class="item">
-                        <div class="item-left">
-                            _<span style="color:#F08080">12</span><br />
-                            APRIL 2015 <i class="fa-comments"></i>09
-                            <hr>
-                            TRENDY CLOTH DESIGNS MADE FROM OUR TEAM <br />
-                            Trendy Collection
-                            <div class="button">
-                                <a href="#">VIEW POST</a><i class="fa-arrow"></i>
-                            </div>
+                        <div class="mySlide secondInScript">
+				            <div class="collumn">
+								<div class="item-text">
+									<h2><span>_</span> 11</h2>
+									<div class="months">
+										<div class="right">
+								            <p>April 2015 </p>
+								            <span><i class="fa fa-comment-o"></i>24</span>
+								        </div>
+										<div class="item-bottom-text">
+                                            <h4>Trendy cloth designs made from<br> our team</h4>
+											<p>Trendy Collection</p>
+											<div class="button">
+												<a class="" href="">View post
+												<i class="fa fa-long-arrow-right"></i> 
+												</a>
+											</div>
+								        </div>
+								    </div>
+								</div>
+								<div class="item-img">
+									<img src="images/blog/bg.png" alt="Post image">
+								</div>
+				            </div>
+							<div class="collumn">
+								<div class="item-text">
+									<h2><span>_</span> 10</h2>
+									<div class="months">
+										<div class="right">
+								            <p>April 2015 </p>
+								            <span><i class="fa fa-comment-o"></i>15</span>
+								        </div>
+										<div class="item-bottom-text">
+                                            <h4>Trendy cloth designs made from<br> our team</h4>
+											<p>Trendy Collection</p>
+											<div class="button">
+												<a class="" href="">View post
+												<i class="fa fa-long-arrow-right"></i> 
+												</a>
+											</div>
+								        </div>
+								    </div>
+								</div>
+								<div class="item-img">
+									<img src="images/blog/bg.png" alt="">
+								</div>
+							</div>
                         </div>
                     </div>
                 </div>
