"testimonials" section is complete.

--- a/index.html
+++ b/index.html
@@ -827,26 +827,59 @@
         <!--End BLOG-->
         <!--Begin TESTIMONIALS-->
         <div class="testimonials">
-            <div class="description">
-                <i class="fa-dialog"></i>
-                <b>LOVELY CLIENTS COMMENT</b>
-                <div class="multi-line"></div>
-            </div>
-            <div class="content">
-                <div class="mySlides">
-                    “It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.“
-                    <ul>
-                        <li>
-                            <b>SAN MICHLE</b>
-                            <p>DIRECTOR OF EXAMPLE LTD</p>
-                        </li>
-                    </ul>
+            <div class="wrapper">
+                <div class="description">
+                    <img src="images/testimonials/msg.png" alt="">
+                    <span class="name">Lovely clients comment</span>
+                    <div class="multi-line"></div>
                 </div>
-            </div>
-            <div class="w3-center w3-section">
-                <span class="hover"></span>
-                <span class="hover"></span>
-                <span class="hover"></span>
+                <div class="content">
+                    <div class="mySlides">
+                        <div class="mySlide thirdInScript">
+                            <p class="description">
+                                <i class="fa fa-quote-left"></i>
+                                It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
+                                <i class="fa fa-quote-right"></i>
+                            </p>
+                            <div class="author-box">
+								<img src="images/testimonials/client_qoute.png" alt="">
+								<div class="author-text">
+									<h4>San Michle</h4>
+									<p>Director of example ltd</p>
+								</div>
+                            </div>
+                        </div>
+                        <div class="mySlide thirdInScript">
+                            <p class="description">
+                                It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
+                            </p>
+                            <div class="author-box">
+								<img src="images/testimonials/client_qoute.png" alt="">
+								<div class="author-text">
+									<h4>Aleksei Rakitski</h4>
+									<p>Director of this sample</p>
+								</div>
+                            </div>
+                        </div>
+                        <div class="mySlide thirdInScript">
+                            <p class="description">
+                                It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
+                            </p>
+                            <div class="author-box">
+								<img src="images/testimonials/client_qoute.png" alt="">
+								<div class="author-text">
+									<h4>Vlad Harbachou</h4>
+									<p>Director of this trainings</p>
+								</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dots-section">
+                    <span class="dot thirdInScript active" onclick="thirdCurrentDiv(1)"></span>
+                    <span class="dot thirdInScript" onclick="thirdCurrentDiv(2)"></span>
+                    <span class="dot thirdInScript" onclick="thirdCurrentDiv(3)"></span>
+                </div>
             </div>
         </div>
         <!--End TESTIMONIALS-->
@@ -990,7 +1023,9 @@
             <!--End SITE MAP-->
             <!--Begin COPYRIGHTS-->
             <div class="copyrights">
-                <p>COPYRIGHT &copy; MEN'SWAER. ALL RIGHTS RESRVED.</p>
+                <div class="wrapper">
+                    <p>Copyright &copy; men'swear. All rights reserved.</p>
+                </div>
             </div>
             <!--End COPYRIGHTS-->
         </footer>
