some additions in "testimonials" section =)

--- a/index.html
+++ b/index.html
@@ -851,7 +851,9 @@
                         </div>
                         <div class="mySlide thirdInScript">
                             <p class="description">
+                                <i class="fa fa-quote-left"></i>
                                 It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
+                                <i class="fa fa-quote-right"></i>
                             </p>
                             <div class="author-box">
 								<img src="images/testimonials/client_qoute.png" alt="">
@@ -863,7 +865,9 @@
                         </div>
                         <div class="mySlide thirdInScript">
                             <p class="description">
+                                <i class="fa fa-quote-left"></i>
                                 It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.
+                                <i class="fa fa-quote-right"></i>
                             </p>
                             <div class="author-box">
 								<img src="images/testimonials/client_qoute.png" alt="">
